samples/_failures_safe/1761344123_81ebe9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_793ba64a.c: In function ‘main’:
./samples/SAFE/__tmp_793ba64a.c:145:20: error: missing terminating " character
  145 |             printf("Invalid
      |                    ^~~~~~~~
./samples/SAFE/__tmp_793ba64a.c:145:13: error: expected expression at end of input
  145 |             printf("Invalid
      |             ^~~~~~
./samples/SAFE/__tmp_793ba64a.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_793ba64a.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_793ba64a.c:145:13: error: expected declaration or statement at end of input
